--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"start": "webpack serve --config ./webpack.config.js --mode development --port 3000",
 		"lint": "eslint --fix src/**/*.js",
-		"compile": "webpack build --config ./webpack.config.js --env=production"
+		"build": "webpack build --config ./webpack.config.js --env=production"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.18.9",
